[package]
name = "libp2p-broadcast"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "broadcast messages to connected peers"
repository = "https://github.com/ipfs-rust/libp2p-broadcast"

[dependencies]
fnv = "1.0.7"
futures = "0.3.15"
libp2p = { version = "0.38.0", default-features = false }

[patch.crates-io]
libp2p = { path = "../rust-libp2p" }
